# cmeel-assimp

./: .cirrus.yml  .mergify.yml  README.md  cmeel.patch  pyproject.toml
.github/workflows/: release.yml
