[project]
name = "cmeel-assimp"
version = "5.2.5"
description = "cmeel distribution for assimp, Open-Asset-Importer-Library Repository"
readme = "assimp/Readme.md"
requires-python = ">= 3.7"
license = "BSD-3-Clause"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-assimp"
repository = "https://github.com/cmake-wheel/cmeel-assimp.git"

[tool.cmeel]
source = "assimp"
configure-args = ["-DASSIMP_BUILD_ASSIMP_TOOLS=ON"]

[build-system]
requires = ["cmeel[build]"]
build-backend = "cmeel.build"
