[build-system]
requires = ["cmeel[build]"]
build-backend = "cmeel.build"

[project]
name = "cmeel-assimp"
version = "5.2.5"
description = "cmeel distribution for assimp, Open-Asset-Importer-Library Repository"
requires-python = ">= 3.7"
license = "BSD-3-Clause"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-assimp"
repository = "https://github.com/cmake-wheel/cmeel-assimp.git"

[tool.cmeel]
build-number = 5
source = "assimp"
configure-args = ["-DASSIMP_BUILD_ASSIMP_TOOLS=ON", "-DASSIMP_WARNINGS_AS_ERRORS=OFF"]
py3-none = true
