[build-system]
build-backend = "cmeel.build"
requires = ["cmeel[build]"]

[project]
description = "cmeel distribution for assimp, Open-Asset-Importer-Library Repository"
license = "BSD-3-Clause"
name = "cmeel-assimp"
requires-python = ">= 3.7"
version = "5.2.5"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-assimp"
repository = "https://github.com/cmake-wheel/cmeel-assimp.git"

[tool.cmeel]
build-number = 12
configure-args = ["-DASSIMP_BUILD_ASSIMP_TOOLS=ON", "-DASSIMP_WARNINGS_AS_ERRORS=OFF"]
py3-none = true
source = "assimp"

[tool.tomlsort]
all = true
